--- a/sorts_project_ws/.vscode/launch.json
+++ b/sorts_project_ws/.vscode/launch.json
@@ -5,6 +5,13 @@
             "name": "CodeLens (Launch) - SortApp",
             "request": "launch",
             "mainClass": "simple_Sorts.SortApp",
+            "projectName": "sorts_project_ws_27b5f910"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - SortApp",
+            "request": "launch",
+            "mainClass": "simple_Sorts.SortApp",
             "projectName": "sorts_project_ws_c54b3e1a"
         }
     ]
