--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@ StackCalc/stackcalc_ws.code-workspace
 StackCalc/.vscode/settings.json
 StackCalc/InfixApp.java
 StackCalc/PostfixApp.java
+StackCalc/Calculator.class
+StackCalc/CalculatorApp.class
+StackCalc/InvalidExampleException.class
+StackCalc/StackIsEmptyException.class
+StackCalc/StackIsFullException.class
+StackCalc/StackX.class
